<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="595dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="256dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:text="@string/price" />


            <RadioGroup
                android:layout_width="290dp"
                android:layout_height="189dp">

                <RadioButton
                    android:id="@+id/above_300"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/above300"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/r100_300"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/r100_300"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/below100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/below100"
                    android:textSize="14sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="189dp"
                android:layout_height="77dp"
                android:layout_weight="1"
                android:text="@string/auth_name" />

            <LinearLayout
                android:id="@+id/aut_cb"
                android:layout_width="374dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/addedfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>